objects/Commission_Eligible_Products__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Quote_Line_Item__r.Quote.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annualized_Premium__c</fullName>
        <description>US27428</description>
        <label>Annualized Premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_Eligible_Quotes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission Eligible Quotes</label>
        <referenceTo>Commission_Eligible_Quotes__c</referenceTo>
        <relationshipLabel>Commission Eligible Products</relationshipLabel>
        <relationshipName>Commission_Eligible_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Year_of_Guarantee__c</fullName>
        <description>US27863</description>
        <inlineHelpText>Applicable When QLI Product Name = Pharmacy - Anthem Pharmacy Services</inlineHelpText>
        <label>Current Year of Guarantee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_of_Guarantee__c</fullName>
        <description>US27863</description>
        <inlineHelpText>Applicable When QLI Product Name = Pharmacy - Anthem Pharmacy Services</inlineHelpText>
        <label>Duration of Guarantee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EssentialFormulary__c</fullName>
        <formula>Quote_Line_Item__r.EssentialFormulary__c</formula>
        <label>Essential Formulary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Renew_With_Growth_Members__c</fullName>
        <description>US27428</description>
        <inlineHelpText>Estimated Growth In Membership From Prior Year. Inputted By Account Team/Sales User.</inlineHelpText>
        <label>Estimated Renew With Growth Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GL_Business_Unit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GL Business Unit</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>Commission_Eligible_Quotes__r.Group_Number__r.Name</formula>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Deductible_Stop_Loss__c</fullName>
        <formula>Quote_Line_Item__r.Individual_Deductible_Amount__c</formula>
        <label>Individual Deductible (Stop Loss)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internal_Commission_Status__c</fullName>
        <formula>TEXT(Commission_Eligible_Quotes__r.Internal_Commissions__r.Commissions_Approval_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Commission Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Commission__c</fullName>
        <formula>CASESAFEID(Commission_Eligible_Quotes__r.Internal_Commissions__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Commission</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailOrder__c</fullName>
        <formula>TEXT( Quote_Line_Item__r.MailOrder__c)</formula>
        <label>Mail Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Stage__c</fullName>
        <formula>Quote_Line_Item__r.IC_ProductStage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLI_Delivery_Channel__c</fullName>
        <formula>IF(ISBLANK(Quote_Line_Item__r.ParentQuoteLineItem__c), 
Quote_Line_Item__r.Delivery_Channel__c,Quote_Line_Item__r.ParentQuoteLineItem__r.Delivery_Channel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QLI Delivery Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLI_Financing__c</fullName>
        <formula>IF(ISBLANK(Quote_Line_Item__r.ParentQuoteLineItem__c), 
                TEXT(Quote_Line_Item__r.Financing__c),Text(Quote_Line_Item__r.ParentQuoteLineItem__r.Financing__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QLI Financing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLI_Funding__c</fullName>
        <formula>IF(ISBLANK(Quote_Line_Item__r.ParentQuoteLineItem__c),
            TEXT(Quote_Line_Item__r.Funding__c),Text(Quote_Line_Item__r.ParentQuoteLineItem__r.Funding__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QLI Funding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLI_Line_Number__c</fullName>
        <formula>Quote_Line_Item__r.LineNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Comes From Associated QLI Record. This Is The &apos;Line Item Number&apos; (Auto Number) Assigned To The QLI Record</inlineHelpText>
        <label>QLI Line Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLI_Members_Estimated__c</fullName>
        <formula>IF(ISBLANK(Quote_Line_Item__r.ParentQuoteLineItem__c), 
            TEXT(Quote_Line_Item__r.Members__c),Text(Quote_Line_Item__r.ParentQuoteLineItem__r.Members__c))</formula>
        <label>QLI Members Estimated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLI_Members_Validated__c</fullName>
        <label>QLI Members Validated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QLI_Parent_Bundle_Name__c</fullName>
        <formula>Quote_Line_Item__r.ParentQuoteLineItem__r.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QLI Parent Bundle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLI_Parent_Bundle__c</fullName>
        <formula>Quote_Line_Item__r.ParentQuoteLineItem__r.LineNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Comes From Associated QLI Record. Designates The Parent Bundle Of A Child Program</inlineHelpText>
        <label>QLI Parent Bundle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLI_Product_Name__c</fullName>
        <formula>Quote_Line_Item__r.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QLI Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLI_Product_Stage__c</fullName>
        <formula>TEXT(Quote_Line_Item__r.ProductStage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QLI Product Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLI_Reason__c</fullName>
        <formula>IF(ISBLANK(Quote_Line_Item__r.ParentQuoteLineItem__c),
TEXT(Quote_Line_Item__r.Reason__c ),Text(Quote_Line_Item__r.ParentQuoteLineItem__r.Reason__c))</formula>
        <label>QLI Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLI_Subscribers_Estimated__c</fullName>
        <formula>IF(ISBLANK(Quote_Line_Item__r.ParentQuoteLineItem__c), 
        TEXT(Quote_Line_Item__r.Subscribers__c),Text(Quote_Line_Item__r.ParentQuoteLineItem__r.Subscribers__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QLI Subscribers Estimated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLI_Subscribers_Validated__c</fullName>
        <description>US27428</description>
        <label>QLI Subscribers Validated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QLI Product Lookup</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Commission Eligible Products</relationshipLabel>
        <relationshipName>Commission_Eligible_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R90__c</fullName>
        <formula>Quote_Line_Item__r.R90__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R90</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RXChoiceTieredNetwork__c</fullName>
        <formula>Quote_Line_Item__r.RXChoiceTieredNetwork__c</formula>
        <label>RX Choice Tiered Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Commission_Eligible_Quotes__r.Internal_Commissions__r.Opportunity_Name__r.Account.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renew_With_Growth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US27428</description>
        <inlineHelpText>Only Growth In Excess Of 500 Members Is Compensated</inlineHelpText>
        <label>Renew With Growth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail__c</fullName>
        <formula>TEXT(Quote_Line_Item__r.Retail__c)</formula>
        <label>Retail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smart_90__c</fullName>
        <formula>Quote_Line_Item__r.Smart_90__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Smart 90</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validated_Renew_With_Growth_Members__c</fullName>
        <description>US27428</description>
        <inlineHelpText>Validated Growth In Membership From Prior Year. Inputted By Internal Compensation User.</inlineHelpText>
        <label>Validated Renew With Growth Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>opportunityId__c</fullName>
        <formula>Quote_Line_Item__r.Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>opportunityId</label>
        <type>Text</type>
    </fields>
    <label>Commission Eligible Products</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Internal_Compensation_Team</fullName>
        <columns>Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>QLI_Product_Name__c</columns>
        <columns>QLI_Parent_Bundle_Name__c</columns>
        <columns>QLI_Product_Stage__c</columns>
        <columns>QLI_Members_Validated__c</columns>
        <columns>QLI_Subscribers_Validated__c</columns>
        <columns>Renew_With_Growth__c</columns>
        <columns>Validated_Renew_With_Growth_Members__c</columns>
        <columns>GL_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Internal_Commission_Status__c</field>
            <operation>equals</operation>
            <value>Pending Response from Internal Comp Team</value>
        </filters>
        <label>Internal Compensation Team</label>
    </listViews>
    <nameField>
        <displayFormat>CEPROD-{0000}</displayFormat>
        <label>Commission Eligible Products Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Eligible Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Renew_With_Growth_If_Product_Renew</fullName>
        <active>true</active>
        <description>&apos;Commission Eligible Products&apos; object which will allow &apos;Renew With Growth&apos; to be checked ONLY WHEN field &apos;QLI Product Stage&apos; = &apos;Renewed&apos;</description>
        <errorConditionFormula>( Renew_With_Growth__c = true ) &amp;&amp; ( QLI_Product_Stage__c  &lt;&gt;  &apos;Renewed&apos;)</errorConditionFormula>
        <errorDisplayField>Renew_With_Growth__c</errorDisplayField>
        <errorMessage>You May Not Check &apos;Renew With Growth&apos; Unless Field &apos;QLI Product Stage&apos;=Renewed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validated_Renew_With_Growth_Members</fullName>
        <active>true</active>
        <errorConditionFormula>Renew_With_Growth__c  &lt;&gt; true  &amp;&amp;  !ISNULL( Validated_Renew_With_Growth_Members__c )</errorConditionFormula>
        <errorDisplayField>Validated_Renew_With_Growth_Members__c</errorDisplayField>
        <errorMessage>You May Not Enter A Value Unless Field &apos;Renew With Growth&apos; Is Checked.</errorMessage>
    </validationRules>
</CustomObject>